external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_incomplete_match.exp
error[E04036]: non-exhaustive pattern
   ┌─ tests/development/enums/matching/invalid_incomplete_match.move:13:16
   │
13 │         match (x) {
   │                ^ Pattern 'Tuple::Two(Maybe::Nothing, _)' not covered

